# megatroll

./: .gitignore  compile_commands.json  readme.md
.arduino/: main.cpp  platformio.ini
.devcontainer/: Dockerfile.base  Dockerfile.full  Dockerfile.sim  build_ws.sh  devcontainer.json  entrypoint.sh
docs/assets/: TODO.md
megajaw_brain/: package.xml  setup.cfg  setup.py
megajaw_brain/megajaw_brain/: controller_node.py
rosbag/: rosbag2images.py
rosbag/rosbag2_2026_04_23-05_42_45/: metadata.yaml  rosbag2_2026_04_23-05_42_45_0.mcap
rosbag/rosbag2_2026_05_20-09_09_35/: metadata.yaml
scripts/: attach_terminal.ps1  attach_terminal.sh  run_container.ps1  run_container.sh
src/ai_training/: bottle_training.ipynb  calibrator.ipynb
src/megajaw_brain/: setup.py
src/megajaw_brain/megajaw_brain/: constants.py  controller_node.py  detector_node.py  fsm_node.py  utils.py
src/megajaw_brain/static/best_ncnn_model_gz/: metadata.yaml  model.ncnn.param  model_ncnn.py
src/megajaw_brain/static/best_ncnn_model_real/: metadata.yaml  model.ncnn.param  model_ncnn.py
src/megajaw_bringup/config/: diff_drive_controller.yaml  gripper_controller.yaml  gz_bridge.yaml
src/megajaw_bringup/launch/: gz.launch.py  hardware.launch.py
src/megajaw_bringup/worlds/: ai_training_world.sdf  modelled.sdf  simple_world.sdf
src/megajaw_description/urdf/: body.xacro  gz.ros2control.xacro  gz_plugins.xacro  materials.xacro  megajaw.xacro.urdf  pidirect.ros2control.xacro  ros2control.xacro
src/megajaw_hardware/: CMakeLists.txt  package.xml
src/megajaw_hardware/include/megajaw_hardware/: GripperDriver.hpp  MotorDriver.hpp
src/megajaw_hardware/src/: GripperDriver.cpp  MotorDriver.cpp  camera_driver_node.cpp  gripper_control_node.cpp  megajaw_interface.cpp
src/megajaw_hardware_direct/: CMakeLists.txt  megajaw_hardware_direct.xml  package.xml
src/megajaw_hardware_direct/include/megajaw_hardware_direct/: MotorDriver.hpp
src/megajaw_hardware_direct/src/: MotorDriver.cpp  megajaw_direct_interface.cpp
src/megajaw_interfaces/: CMakeLists.txt  package.xml
src/megajaw_interfaces/msg/: TargetControl.msg
src/megajaw_uart_bridge/: package.xml  setup.cfg  setup.py
src/megajaw_uart_bridge/megajaw_uart_bridge/: uart_bridge_node.py
src/web_interface/: index.html  index.js  style.css
src/web_interface_no_jotstick/: index.html  index.js  style.css
src/web_interface_no_joystick/: index.html  index.js  package-lock.json  package.json  style.css
